--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<div class="price">Price: ₹330 प्रति किलो</div>
-      <div>Only Surat — Free Delivery</div>
+Delivery</div>
       <div>Homemade Taste</div>
     </div>
 
