Enhance index.html with SEO and metadata
Added SEO metadata, Open Graph tags, and structured data for RJ Papad.

Signed-off-by: Rajesh parmar <rjpapad111983@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,4 +1,53 @@
-Delivery</div>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Primary title and description (SEO) -->
+  <title>स्वाद में खास RJ पापड़ का विश्वास — उड़द मरी पापड़ | ₹330/kg | Surat</title>
+  <meta name="description" content="स्वाद में खास RJ पापड़ का विश्वास — उड़द मरी पापड़। Only Surat free delivery. Homemade taste. Order: +91 6353745646." />
+  <meta name="keywords" content="RJ Papad, पापड़ Surat, उड़द मरी पापड़, homemade papad Surat, RJ papad price 330" />
+  <link rel="canonical" href="https://rjpapad111983-svg.github.io/Rjpapad-/" />
+
+  <!-- Open Graph / social preview -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="स्वाद में खास RJ पापड़ का विश्वास — उड़द मरी पापड़" />
+  <meta property="og:description" content="₹330 प्रति किलो — Only Surat free delivery. Homemade taste. Order: +91 6353745646" />
+  <meta property="og:image" content="PASTE_YOUR_IMAGE_RAW_URL_HERE" />
+  <meta property="og:url" content="https://rjpapad111983-svg.github.io/Rjpapad-/" />
+  <meta property="og:site_name" content="RJ Papad" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="स्वाद में खास RJ पापड़ का विश्वास" />
+  <meta name="twitter:description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste • +91 6353745646" />
+  <meta name="twitter:image" content="PASTE_YOUR_IMAGE_RAW_URL_HERE" />
+
+  <!-- favicon (optional) -->
+  <link rel="icon" href="https://rjpapad111983-svg.github.io/Rjpapad-/favicon.ico" />
+
+  <meta name="theme-color" content="#ffd11a" />
+
+  <!-- Structured data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "RJ Papad",
+    "description": "स्वाद में खास RJ पापड़ का विश्वास — उड़द मरी पापड़. ₹330 प्रति किलो. Only Surat free delivery. Homemade taste.",
+    "image": "PASTE_YOUR_IMAGE_RAW_URL_HERE",
+    "telephone": "+916353745646",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Surat",
+      "addressRegion": "Gujarat",
+      "addressCountry": "IN"
+    },
+    "url": "https://rjpapad111983-svg.github.io/Rjpapad-/",
+    "priceRange": "₹330/kg",
+    "openingHours": "Mo,Tu,We,Th,Fr,Sa,Su 08:00-20:00"
+  }
+  </script>
+</head>Delivery</div>
       <div>Homemade Taste</div>
     </div>
 
