Update Open Graph and Twitter meta image URLs
Signed-off-by: Rajesh parmar <rjpapad111983@gmail.com>

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="स्वाद में खास RJ पापड़ का विश्वास — उड़द मरी पापड़" />
   <meta property="og:description" content="₹330 प्रति किलो — Only Surat free delivery. Homemade taste. Order: +91 6353745646" />
-  <meta property="og:image" content="PASTE_YOUR_IMAGE_RAW_URL_HERE" />
+  <meta property="og:image" content="PASTE_YOUR_IMAGE_RAW_URL_HERE" />https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/file_00000000de78....png
   <meta property="og:url" content="https://rjpapad111983-svg.github.io/Rjpapad-/" />
   <meta property="og:site_name" content="RJ Papad" />
 
@@ -20,7 +20,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="स्वाद में खास RJ पापड़ का विश्वास" />
   <meta name="twitter:description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste • +91 6353745646" />
-  <meta name="twitter:image" content="PASTE_YOUR_IMAGE_RAW_URL_HERE" />
+  <meta name="twitter:image" content="PASTE_YOUR_IMAGE_RAW_URL_HERE" />https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/file_00000000de78....png
 
   <!-- favicon (optional) -->
   <link rel="icon" href="https://rjpapad111983-svg.github.io/Rjpapad-/favicon.ico" />
