Enhance SEO and social media metadata in index.html
Added SEO metadata, Open Graph tags, and structured data for RJ Papad.

Signed-off-by: Rajesh parmar <rjpapad111983@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,6 +2,62 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <!-- ===== Primary title & description (SEO) ===== -->
+  <title>स्वाद में खास RJ पापड़ का विश्वास — उड़द मरी पापड़ | ₹330/kg | Surat</title>
+  <meta name="description" content="स्वाद में खास RJ पापड़ का विश्वास — उड़द मरी पापड़. ₹330 प्रति किलो. Only Surat free delivery. Homemade taste. Order: +91 6353745646." />
+  <meta name="keywords" content="RJ Papad, पापड़ Surat, उड़द मरी पापड़, homemade papad, RJ papad price 330" />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://rjpapad111983-svg.github.io/Rjpapad-/" />
+
+  <!-- ===== Open Graph (Facebook / WhatsApp preview) ===== -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="स्वाद में खास RJ पापड़ का विश्वास — RJ Papad | ₹330/kg" />
+  <meta property="og:description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste • +91 6353745646" />
+  <meta property="og:url" content="https://rjpapad111983-svg.github.io/Rjpapad-/" />
+  <meta property="og:site_name" content="RJ Papad" />
+  <meta property="og:image" content="PASTE_YOUR_IMAGE_RAW_URL_HERE" /> <!-- <<== Replace this -->
+
+  <!-- ===== Twitter card (for Twitter, Telegram, some other previews) ===== -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="स्वाद में खास RJ पापड़ का विश्वास — RJ Papad" />
+  <meta name="twitter:description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste • +91 6353745646" />
+  <meta name="twitter:image" content="PASTE_YOUR_IMAGE_RAW_URL_HERE" /> <!-- <<== Replace this -->
+
+  <!-- ===== Favicon (optional) ===== -->
+  <link rel="icon" href="https://rjpapad111983-svg.github.io/Rjpapad-/favicon.ico" />
+
+  <!-- ===== Theme color for mobile browsers ===== -->
+  <meta name="theme-color" content="#ffd11a" />
+
+  <!-- ===== Structured data (LocalBusiness JSON-LD) ===== -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "RJ Papad",
+    "description": "उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste",
+    "image": "PASTE_YOUR_IMAGE_RAW_URL_HERE",
+    "telephone": "+916353745646",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Surat",
+      "addressRegion": "Gujarat",
+      "addressCountry": "IN"
+    },
+    "url": "https://rjpapad111983-svg.github.io/Rjpapad-/",
+    "priceRange": "₹330/kg",
+    "openingHours": "Mo,Tu,We,Th,Fr,Sa,Su 08:00-20:00"
+  }
+  </script>
+
+  <!-- ===== Optional: robots meta (page-level) ===== -->
+  <meta name="robots" content="index, follow" />
+  <!-- ===== END head ===== -->
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <!-- Primary title and description (SEO) -->
   <title>स्वाद में खास RJ पापड़ का विश्वास — उड़द मरी पापड़ | ₹330/kg | Surat</title>
   <meta name="description" content="स्वाद में खास RJ पापड़ का विश्वास — उड़द मरी पापड़। Only Surat free delivery. Homemade taste. Order: +91 6353745646." />
@@ -47,7 +103,119 @@
     "openingHours": "Mo,Tu,We,Th,Fr,Sa,Su 08:00-20:00"
   }
   </script>
-</<head>
+</<head><head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- ===== Primary title & description (SEO) ===== -->
+  <title>स्वाद में खास RJ पापड़ का विश्वास — उड़द मरी पापड़ | ₹330/kg | Surat</title>
+  <meta name="description" content="स्वाद में खास RJ पापड़ का विश्वास — उड़द मरी पापड़. ₹330 प्रति किलो. Only Surat free delivery. Homemade taste. Order: +91 6353745646." />
+  <meta name="keywords" content="RJ Papad, पापड़ Surat, उड़द मरी पापड़, homemade papad, RJ papad price 330" />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://rjpapad111983-svg.github.io/Rjpapad-/" />
+
+  <!-- ===== Open Graph (Facebook / WhatsApp preview) ===== -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="स्वाद में खास RJ पापड़ का विश्वास — RJ Papad | ₹330/kg" />
+  <meta property="og:description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste • +91 6353745646" />
+  <meta property="og:url" content="https://rjpapad111983-svg.github.io/Rjpapad-/" />
+  <meta property="og:site_name" content="RJ Papad" />
+  <meta property="og:image" content="PASTE_YOUR_IMAGE_RAW_URL_HERE" /> <!-- <<== Replace this -->
+
+  <!-- ===== Twitter card (for Twitter, Telegram, some other previews) ===== -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="स्वाद में खास RJ पापड़ का विश्वास — RJ Papad" />
+  <meta name="twitter:description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste • +91 6353745646" />
+  <meta name="twitter:image" content="PASTE_YOUR_IMAGE_RAW_URL_HERE" /> <!-- <<== Replace this -->
+
+  <!-- ===== Favicon (optional) ===== -->
+  <link rel="icon" href="https://rjpapad111983-svg.github.io/Rjpapad-/favicon.ico" />
+
+  <!-- ===== Theme color for mobile browsers ===== -->
+  <meta name="theme-color" content="#ffd11a" />
+
+  <!-- ===== Structured data (LocalBusiness JSON-LD) ===== -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "RJ Papad",
+    "description": "उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste",
+    "image": "PASTE_YOUR_IMAGE_RAW_URL_HERE",
+    "telephone": "+916353745646",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Surat",
+      "addressRegion": "Gujarat",
+      "addressCountry": "IN"
+    },
+    "url": "https://rjpapad111983-svg.github.io/Rjpapad-/",
+    "priceRange": "₹330/kg",
+    "openingHours": "Mo,Tu,We,Th,Fr,Sa,Su 08:00-20:00"
+  }
+  </script>
+
+  <!-- ===== Optional: robots meta (page-level) ===== -->
+  <meta name="robots" content="index, follow" />
+  <!-- ===== END head ===== -->
+</head><head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- ===== Primary title & description (SEO) ===== -->
+  <title>स्वाद में खास RJ पापड़ का विश्वास — उड़द मरी पापड़ | ₹330/kg | Surat</title>
+  <meta name="description" content="स्वाद में खास RJ पापड़ का विश्वास — उड़द मरी पापड़. ₹330 प्रति किलो. Only Surat free delivery. Homemade taste. Order: +91 6353745646." />
+  <meta name="keywords" content="RJ Papad, पापड़ Surat, उड़द मरी पापड़, homemade papad, RJ papad price 330" />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://rjpapad111983-svg.github.io/Rjpapad-/" />
+
+  <!-- ===== Open Graph (Facebook / WhatsApp preview) ===== -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="स्वाद में खास RJ पापड़ का विश्वास — RJ Papad | ₹330/kg" />
+  <meta property="og:description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste • +91 6353745646" />
+  <meta property="og:url" content="https://rjpapad111983-svg.github.io/Rjpapad-/" />
+  <meta property="og:site_name" content="RJ Papad" />
+  <meta property="og:image" content="PASTE_YOUR_IMAGE_RAW_URL_HERE" /> <!-- <<== Replace this -->
+
+  <!-- ===== Twitter card (for Twitter, Telegram, some other previews) ===== -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="स्वाद में खास RJ पापड़ का विश्वास — RJ Papad" />
+  <meta name="twitter:description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste • +91 6353745646" />
+  <meta name="twitter:image" content="PASTE_YOUR_IMAGE_RAW_URL_HERE" /> <!-- <<== Replace this -->
+
+  <!-- ===== Favicon (optional) ===== -->
+  <link rel="icon" href="https://rjpapad111983-svg.github.io/Rjpapad-/favicon.ico" />
+
+  <!-- ===== Theme color for mobile browsers ===== -->
+  <meta name="theme-color" content="#ffd11a" />
+
+  <!-- ===== Structured data (LocalBusiness JSON-LD) ===== -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "RJ Papad",
+    "description": "उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste",
+    "image": "PASTE_YOUR_IMAGE_RAW_URL_HERE",
+    "telephone": "+916353745646",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Surat",
+      "addressRegion": "Gujarat",
+      "addressCountry": "IN"
+    },
+    "url": "https://rjpapad111983-svg.github.io/Rjpapad-/",
+    "priceRange": "₹330/kg",
+    "openingHours": "Mo,Tu,We,Th,Fr,Sa,Su 08:00-20:00"
+  }
+  </script>
+
+  <!-- ===== Optional: robots meta (page-level) ===== -->
+  <meta name="robots" content="index, follow" />
+  <!-- ===== END head ===== -->
+</head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -95,7 +263,63 @@
     "priceRange": "₹330/kg",
     "openingHours": "Mo,Tu,We,Th,Fr,Sa,Su 08:00-20:00"
   }
+  </script><head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- ===== Primary title & description (SEO) ===== -->
+  <title>स्वाद में खास RJ पापड़ का विश्वास — उड़द मरी पापड़ | ₹330/kg | Surat</title>
+  <meta name="description" content="स्वाद में खास RJ पापड़ का विश्वास — उड़द मरी पापड़. ₹330 प्रति किलो. Only Surat free delivery. Homemade taste. Order: +91 6353745646." />
+  <meta name="keywords" content="RJ Papad, पापड़ Surat, उड़द मरी पापड़, homemade papad, RJ papad price 330" />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://rjpapad111983-svg.github.io/Rjpapad-/" />
+
+  <!-- ===== Open Graph (Facebook / WhatsApp preview) ===== -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="स्वाद में खास RJ पापड़ का विश्वास — RJ Papad | ₹330/kg" />
+  <meta property="og:description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste • +91 6353745646" />
+  <meta property="og:url" content="https://rjpapad111983-svg.github.io/Rjpapad-/" />
+  <meta property="og:site_name" content="RJ Papad" />
+  <meta property="og:image" content="PASTE_YOUR_IMAGE_RAW_URL_HERE" /> <!-- <<== Replace this -->
+
+  <!-- ===== Twitter card (for Twitter, Telegram, some other previews) ===== -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="स्वाद में खास RJ पापड़ का विश्वास — RJ Papad" />
+  <meta name="twitter:description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste • +91 6353745646" />
+  <meta name="twitter:image" content="PASTE_YOUR_IMAGE_RAW_URL_HERE" /> <!-- <<== Replace this -->
+
+  <!-- ===== Favicon (optional) ===== -->
+  <link rel="icon" href="https://rjpapad111983-svg.github.io/Rjpapad-/favicon.ico" />
+
+  <!-- ===== Theme color for mobile browsers ===== -->
+  <meta name="theme-color" content="#ffd11a" />
+
+  <!-- ===== Structured data (LocalBusiness JSON-LD) ===== -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "RJ Papad",
+    "description": "उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste",
+    "image": "PASTE_YOUR_IMAGE_RAW_URL_HERE",
+    "telephone": "+916353745646",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Surat",
+      "addressRegion": "Gujarat",
+      "addressCountry": "IN"
+    },
+    "url": "https://rjpapad111983-svg.github.io/Rjpapad-/",
+    "priceRange": "₹330/kg",
+    "openingHours": "Mo,Tu,We,Th,Fr,Sa,Su 08:00-20:00"
+  }
   </script>
+
+  <!-- ===== Optional: robots meta (page-level) ===== -->
+  <meta name="robots" content="index, follow" />
+  <!-- ===== END head ===== -->
+</head>
 </head> >Delivery</div>
       <div>Homemade Taste</div>
     </div>
@@ -174,4 +398,60 @@
     "openingHours": "Mo,Tu,We,Th,Fr,Sa,Su 08:00-20:00"
   }
   </script>
+</head><head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- ===== Primary title & description (SEO) ===== -->
+  <title>स्वाद में खास RJ पापड़ का विश्वास — उड़द मरी पापड़ | ₹330/kg | Surat</title>
+  <meta name="description" content="स्वाद में खास RJ पापड़ का विश्वास — उड़द मरी पापड़. ₹330 प्रति किलो. Only Surat free delivery. Homemade taste. Order: +91 6353745646." />
+  <meta name="keywords" content="RJ Papad, पापड़ Surat, उड़द मरी पापड़, homemade papad, RJ papad price 330" />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://rjpapad111983-svg.github.io/Rjpapad-/" />
+
+  <!-- ===== Open Graph (Facebook / WhatsApp preview) ===== -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="स्वाद में खास RJ पापड़ का विश्वास — RJ Papad | ₹330/kg" />
+  <meta property="og:description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste • +91 6353745646" />
+  <meta property="og:url" content="https://rjpapad111983-svg.github.io/Rjpapad-/" />
+  <meta property="og:site_name" content="RJ Papad" />
+  <meta property="og:image" content="PASTE_YOUR_IMAGE_RAW_URL_HERE" /> <!-- <<== Replace this -->
+
+  <!-- ===== Twitter card (for Twitter, Telegram, some other previews) ===== -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="स्वाद में खास RJ पापड़ का विश्वास — RJ Papad" />
+  <meta name="twitter:description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste • +91 6353745646" />
+  <meta name="twitter:image" content="PASTE_YOUR_IMAGE_RAW_URL_HERE" /> <!-- <<== Replace this -->
+
+  <!-- ===== Favicon (optional) ===== -->
+  <link rel="icon" href="https://rjpapad111983-svg.github.io/Rjpapad-/favicon.ico" />
+
+  <!-- ===== Theme color for mobile browsers ===== -->
+  <meta name="theme-color" content="#ffd11a" />
+
+  <!-- ===== Structured data (LocalBusiness JSON-LD) ===== -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "RJ Papad",
+    "description": "उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste",
+    "image": "PASTE_YOUR_IMAGE_RAW_URL_HERE",
+    "telephone": "+916353745646",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Surat",
+      "addressRegion": "Gujarat",
+      "addressCountry": "IN"
+    },
+    "url": "https://rjpapad111983-svg.github.io/Rjpapad-/",
+    "priceRange": "₹330/kg",
+    "openingHours": "Mo,Tu,We,Th,Fr,Sa,Su 08:00-20:00"
+  }
+  </script>
+
+  <!-- ===== Optional: robots meta (page-level) ===== -->
+  <meta name="robots" content="index, follow" />
+  <!-- ===== END head ===== -->
 </head>
