Add Open Graph and Twitter meta tags
Added Open Graph and Twitter meta tags for better sharing.

Signed-off-by: Rajesh parmar <rjpapad111983@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-<head>
+<head><!-- Open Graph (Facebook, WhatsApp, etc.) -->
+<meta property="og:title" content="स्वाद में खास RJ पापड़ का विश्वास" />
+<meta property="og:description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat Free Delivery • Homemade taste • +91 6353745646" />
+<meta property="og:image" content="https://raw.githubusercontent.com/USERNAME/REPO/main/banner.png" />
+<meta property="og:url" content="https://USERNAME.github.io/REPO/" />
+<meta property="og:type" content="website" />
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="स्वाद में खास RJ पापड़ का विश्वास" />
+<meta name="twitter:description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat Free Delivery" />
+<meta name="twitter:image" content="https://raw.githubusercontent.com/USERNAME/REPO/main/banner.png" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
