Insert banner image in header of index.html
Added a header section with a banner image to enhance the visual appeal of the page.

Signed-off-by: Rajesh parmar <rjpapad111983@gmail.com>

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
   <!-- ===== Optional: robots meta (page-level) ===== -->
   <meta name="robots" content="index, follow" />
   <!-- ===== END head ===== -->
-<head>
+<head><header>
+  <img src="https://raw.githubusercontent.com/USERNAME/REPO/main/banner.png" alt="RJ Papad Banner" style="max-width:100%;height:auto;">
+</header>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
