Enhance SEO and social media metadata in index.html
Added meta tags for SEO and social media sharing, including Open Graph and Twitter Card tags. Updated the document structure with a proper doctype and language attribute.

Signed-off-by: Rajesh parmar <rjpapad111983@gmail.com>

--- a/index.html
+++ b/index.html
@@ -66,7 +66,116 @@
   <meta name="robots" content="index, follow" />
   <!-- ===== END head ===== -->
 <head><header>
-  <img src="https://raw.githubusercontent.com/USERNAME/REPO/main/banner.png" alt="RJ Papad Banner" style="max-width:100%;height:auto;">
+ <!DOCTYPE html>
+<html lang="hi">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>स्वाद में खास RJ पापड़ का विश्वास | उड़द मरी पापड़ | ₹330/kg | Surat</title>
+  <meta name="description" content="RJ Papad Surat | स्वाद में खास RJ पापड़ का विश्वास. उड़द मरी पापड़ ₹330/kg. Only Surat free delivery. Homemade taste. Order: +91 6353745646." />
+  <meta name="keywords" content="RJ Papad, Surat Papad, उड़द मरी पापड़, homemade papad, Papad Manufacturer, Gujarati Papad" />
+  <link rel="canonical" href="https://rjpapad111983-svg.github.io/Rjpapad-/" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- ✅ Open Graph (Facebook / WhatsApp) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="स्वाद में खास RJ पापड़ का विश्वास | RJ Papad Surat" />
+  <meta property="og:description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste • +91 6353745646" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/banner.png" />
+  <meta property="og:url" content="https://rjpapad111983-svg.github.io/Rjpapad-/" />
+  <meta property="og:site_name" content="RJ Papad Surat" />
+
+  <!-- ✅ Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="स्वाद में खास RJ पापड़ का विश्वास" />
+  <meta name="twitter:description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste" />
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/banner.png" />
+
+  <!-- ✅ Schema.org (LocalBusiness) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "RJ Papad",
+    "description": "उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste",
+    "image": "https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/banner.png",
+    "telephone": "+916353745646",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Surat",
+      "addressRegion": "Gujarat",
+      "addressCountry": "IN"
+    },
+    "url": "https://rjpapad111983-svg.github.io/Rjpapad-/",
+    "priceRange": "₹330/kg"
+  }
+  </script>
+
+  <style>
+    body {
+      font-family: "Noto Sans Devanagari", sans-serif;
+      background-color: #fffbea;
+      color: #2e2e2e;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    header {
+      background-color: #ffd93b;
+      padding: 10px 0;
+    }
+    header img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 10px;
+    }
+    h1 {
+      color: #a35d00;
+      margin-top: 10px;
+    }
+    .price {
+      font-size: 22px;
+      font-weight: bold;
+      color: #000;
+    }
+    footer {
+      margin-top: 20px;
+      padding: 10px;
+      background: #ffe066;
+      color: #333;
+      font-size: 14px;
+    }
+    a.whatsapp {
+      display: inline-block;
+      background: #25D366;
+      color: white;
+      padding: 10px 15px;
+      border-radius: 25px;
+      text-decoration: none;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+  </style>
+</head>
+
+<body>
+  <header>
+    <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/banner.png" alt="RJ Papad Banner">
+  </header>
+
+  <main>
+    <h1>स्वाद में खास RJ पापड़ का विश्वास</h1>
+    <p>उड़द मरी पापड़ • Homemade Taste • ₹330 प्रति किलो</p>
+    <p class="price">Only Surat Free Delivery 🚚</p>
+    <a class="whatsapp" href="https://wa.me/916353745646?text=नमस्ते%20मुझे%20RJ%20पापड़%20ऑर्डर%20करना%20है" target="_blank">📞 WhatsApp Order Now</a>
+  </main>
+
+  <footer>
+    RJ Papad Surat • Homemade Udad Papad • +91 6353745646 <br>
+    <small>© 2025 RJ Papad | Surat, Gujarat</small>
+  </footer>
+</body>
+</html> <img src="https://raw.githubusercontent.com/USERNAME/REPO/main/banner.png" alt="RJ Papad Banner" style="max-width:100%;height:auto;">
 </header>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
