--- a/index.html
+++ b/index.html
@@ -1,64 +1,28 @@
-<meta property="og:title" content="स्वाद में खास RJ पापड़ का विश्वास" />
-<meta property="og:description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat Free Delivery • Homemade taste • +91 6353745646" />
-<meta property="og:image" content="https://raw.githubusercontent.com/USERNAME/REPO/main/banner.png" />
-<meta property="og:url" content="https://USERNAME.github.io/REPO/" />
-<meta property="og:type" content="website" />
-
-<!-- Twitter -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="स्वाद में खास RJ पापड़ का विश्वास" />
-<meta name="twitter:description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat Free Delivery" />
-<meta name="twitter:image" content="https://raw.githubusercontent.com/USERNAME/REPO/main/banner.png" />
+<!doctype html>
+<html lang="hi">
+<head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>RJ Papad — टेस्ट पेज</title>
+  <style>
+    body{font-family:sans-serif;background:#fffbea;color:#222;text-align:center;padding:20px}
+    header{background:#ffd93b;padding:12px;border-radius:8px}
+    img{max-width:100%;height:auto;border-radius:10px}
+    .btn{display:inline-block;background:#25D366;color:#fff;padding:10px 14px;border-radius:24px;text-decoration:none;font-weight:700;margin-top:12px}
+  </style>
+</head>
+<body>
+  <header>
+    <h1>RJ Papad — टेस्ट पेज</h1>
+  </header>
 
-  <!-- ===== Primary title & description (SEO) ===== -->
-  <title>स्वाद में खास RJ पापड़ का विश्वास — उड़द मरी पापड़ | ₹330/kg | Surat</title>
-  <meta name="description" content="स्वाद में खास RJ पापड़ का विश्वास — उड़द मरी पापड़. ₹330 प्रति किलो. Only Surat free delivery. Homemade taste. Order: +91 6353745646." />
-  <meta name="keywords" content="RJ Papad, पापड़ Surat, उड़द मरी पापड़, homemade papad, RJ papad price 330" />
+  <main>
+    <p>अगर यह दिख रहा है तो site ठीक चल रही है।</p>
+    <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/banner.png" alt="RJ Papad Banner" />
+    <p><strong>उड़द मरी पापड़ — ₹330/kg • Only Surat Free Delivery</strong></p>
+    <a class="btn" href="https://wa.me/916353745646" target="_blank">WhatsApp Order</a>
+  </main>
 
-  <!-- Canonical -->
-  <link rel="canonical" href="https://rjpapad111983-svg.github.io/Rjpapad-/" />
-
-  <!-- ===== Open Graph (Facebook / WhatsApp preview) ===== -->
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="स्वाद में खास RJ पापड़ का विश्वास — RJ Papad | ₹330/kg" />
-  <meta property="og:description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste • +91 6353745646" />
-  <meta property="og:url" content="https://rjpapad111983-svg.github.io/Rjpapad-/" />
-  <meta property="og:site_name" content="RJ Papad" />
-  <meta property="og:image" content="PASTE_YOUR_IMAGE_RAW_URL_HERE" /> <!-- <<== Replace this -->
-
-  <!-- ===== Twitter card (for Twitter, Telegram, some other previews) ===== -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="स्वाद में खास RJ पापड़ का विश्वास — RJ Papad" />
-  <meta name="twitter:description" content="उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste • +91 6353745646" />
-  <meta name="twitter:image" content="PASTE_YOUR_IMAGE_RAW_URL_HERE" /> <!-- <<== Replace this -->
-
-  <!-- ===== Favicon (optional) ===== -->
-  <link rel="icon" href="https://rjpapad111983-svg.github.io/Rjpapad-/favicon.ico" />
-
-  <!-- ===== Theme color for mobile browsers ===== -->
-  <meta name="theme-color" content="#ffd11a" />
-
-  <!-- ===== Structured data (LocalBusiness JSON-LD) ===== -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "LocalBusiness",
-    "name": "RJ Papad",
-    "description": "उड़द मरी पापड़ • ₹330/kg • Only Surat free delivery • Homemade taste",
-    "image": "PASTE_YOUR_IMAGE_RAW_URL_HERE",
-    "telephone": "+916353745646",
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Surat",
-      "addressRegion": "Gujarat",
-      "addressCountry": "IN"
-    },
-    "url": "https://rjpapad111983-svg.github.io/Rjpapad-/",
-    "priceRange": "₹330/kg",
-    "openingHours": "Mo,Tu,We,Th,Fr,Sa,Su 08:00-20:00"
-  }
-  </script>
-
-  <!-- ===== Optional: robots meta (page-level) ===== -->
+  <footer style="margin-top:18px;font-size:13px;color:#555">© RJ Papad</footer>
+</body>
+</html>
