Fix image tag duplication in index.html
Signed-off-by: Rajesh parmar <rjpapad111983@gmail.com>

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <main>
     <p>अगर यह दिख रहा है तो site ठीक चल रही है।</p>
-    <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/banner.png" alt="RJ Papad Banner" />
+    <img src=<img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/banner.png" alt="RJ Papad Banner">"https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/banner.png" alt="RJ Papad Banner" />
     <p><strong>उड़द मरी पापड़ — ₹330/kg • Only Surat Free Delivery</strong></p>
     <a class="btn" href="https://wa.me/916353745646" target="_blank">WhatsApp Order</a>
   </main>
