--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="hi">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>RJ Papad — टेस्ट पेज</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>RJ Papad Surat</title>
   <style>
-    body{font-family:sans-serif;background:#fffbea;color:#222;text-align:center;padding:20px}
-    header{background:#ffd93b;padding:12px;border-radius:8px}
-    img{max-width:100%;height:auto;border-radius:10px}
-    .btn{display:inline-block;background:#25D366;color:#fff;padding:10px 14px;border-radius:24px;text-decoration:none;font-weight:700;margin-top:12px}
+    body{font-family:sans-serif;background:#fffbea;color:#333;text-align:center;margin:0;padding:0}
+    header{background:#ffd93b;padding:15px;border-radius:0 0 15px 15px}
+    img{max-width:100%;height:auto;border-radius:10px;margin:15px auto;display:block}
+    .btn{display:inline-block;background:#25D366;color:white;padding:10px 20px;border-radius:25px;text-decoration:none;font-weight:bold}
   </style>
 </head>
 <body>
   <header>
-    <h1>RJ Papad — टेस्ट पेज</h1>
+    <h1>स्वाद में खास RJ पापड़ का विश्वास</h1>
   </header>
 
-  <main>
-    <p>अगर यह दिख रहा है तो site ठीक चल रही है।</p>
-    <img src=<img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/banner.png" alt="RJ Papad Banner">"https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/banner.png" alt="RJ Papad Banner" />
-    <p><strong>उड़द मरी पापड़ — ₹330/kg • Only Surat Free Delivery</strong></p>
-    <a class="btn" href="https://wa.me/916353745646" target="_blank">WhatsApp Order</a>
-  </main>
+  <!-- 👉 यहाँ अपना RAW image URL डालें -->
+  <img src="PASTE_YOUR_RAW_URL_HERE" alt="RJ Papad Banner">
 
-  <footer style="margin-top:18px;font-size:13px;color:#555">© RJ Papad</footer>
+  <p>उड़द मरी पापड़ • ₹330/kg • Only Surat Free Delivery</p>
+
+  <a class="btn" href="https://wa.me/916353745646" target="_blank">📞 WhatsApp Order</a>
+
+  <footer style="margin-top:20px;font-size:13px;color:#555">© 2025 RJ Papad Surat</footer>
 </body>
 </html>
