Enhance SEO with title and meta tags in index.html
Added title, meta description, and canonical link for SEO.

Signed-off-by: Rajesh parmar <rjpapad111983@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
+  <title>RJ Papad Surat — स्वाद में खास RJ पापड़ | ₹330/kg | Homemade Udad Papad</title>
+<meta name="description" content="RJ Papad Surat — स्वाद में खास RJ पापड़ का विश्वास. Udad mri papad ₹330/kg. Only Surat free delivery. Order: +91 6353745646" />
+<link rel="canonical" href="https://rjpapad111983-svg.github.io/Rjpapad-/" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>RJ Papad Surat</title>
