Fix HTML structure and update content
Signed-off-by: Rajesh parmar <rjpapad111983@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
-  <title>RJ Papad Surat — स्वाद में खास RJ पापड़ | ₹330/kg | Homemade Udad Papad</title>
 <meta name="description" content="RJ Papad Surat — स्वाद में खास RJ पापड़ का विश्वास. Udad mri papad ₹330/kg. Only Surat free delivery. Order: +91 6353745646" />
 <link rel="canonical" href="https://rjpapad111983-svg.github.io/Rjpapad-/" />
   <meta charset="utf-8">
@@ -13,8 +12,11 @@
     img{max-width:100%;height:auto;border-radius:10px;margin:15px auto;display:block}
     .btn{display:inline-block;background:#25D366;color:white;padding:10px 20px;border-radius:25px;text-decoration:none;font-weight:bold}
   </style>
-</head>
-<body>
+</head><title>RJ Papad Surat — स्वाद में खास RJ पापड़ | ₹330/kg | Homemade Udad Papad</title>
+<meta name="description" content="RJ Papad Surat — स्वाद में खास RJ पापड़ का विश्वास. Udad mri papad ₹330/kg. Only Surat free delivery. Order: +91 6353745646" />
+<link rel="canonical" href="https://rjpapad111983-svg.github.io/Rjpapad-/" />
+<body><h1>RJ Papad Surat — स्वाद में खास RJ पापड़</h1>
+<p>RJ Papad Surat से ताज़ा <strong>उड़द मरी पापड़</strong> — कीमत ₹330 प्रति किलो. Only Surat free delivery. ऑर्डर करें: <a href="tel:+916353745646">+91 6353745646</a> या <a href="https://wa.me/916353745646">WhatsApp</a>.</p>
   <header>
     <h1>स्वाद में खास RJ पापड़ का विश्वास</h1>
   </header>
