Enhance index.html with product details and image
Added promotional content and image for RJ Papad Surat.

Signed-off-by: Rajesh parmar <rjpapad111983@gmail.com>

--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
   <a class="btn" href="https://wa.me/916353745646" target="_blank">📞 WhatsApp Order</a>
 
   <footer style="margin-top:20px;font-size:13px;color:#555">© 2025 RJ Papad Surat</footer>
-</body>
-</html>
+</body><h1>RJ Papad Surat — स्वाद में खास RJ पापड़</h1>
+<p>RJ Papad Surat से ताज़ा <strong>उड़द मरी पापड़</strong> — कीमत ₹330 प्रति किलो. Only Surat free delivery. ऑर्डर करें: <a href="tel:+916353745646">+91 6353745646</a> या <a href="https://wa.me/916353745646">WhatsApp</a>.</p>
+</html><img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/main/rj-papad-surat-banner.png"
+     alt="RJ Papad Surat - उड़द मरी पापड़ ₹330/kg" />
