Add delivery areas section to index.html
Added delivery section with areas and contact information.

Signed-off-by: Rajesh parmar <rjpapad111983@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="hi">
+  <section id="delivery">
+  <h2>Delivery Areas — RJ Papad Surat</h2>
+  <p>हम Surat के Adajan, Varachha, Vesu, Pal और Bhestan सहित कई इलाकों में मुफ्त डिलीवरी करते हैं. <a href="areas.html">पुरे सूची देखें</a> या WhatsApp करें: <a href="https://wa.me/916353745646">+91 6353745646</a>.</p>
+  </section>
 <head>
 <meta name="description" content="RJ Papad Surat — स्वाद में खास RJ पापड़ का विश्वास. Udad mri papad ₹330/kg. Only Surat free delivery. Order: +91 6353745646" />
 <link rel="canonical" href="https://rjpapad111983-svg.github.io/Rjpapad-/" />
